--- a/Lms-Frontend/src/app/login/admin-login/admin-login.component.css
+++ b/Lms-Frontend/src/app/login/admin-login/admin-login.component.css
@@ -1,25 +1,32 @@
-
-.login{
-    margin-top: 10%;
-    height: 60%;
+img{
+    position: relative;
+     width: 100%; 
+      min-height:100vh;
+      height: 600px;
+      background-attachment: fixed;
+      background-size: cover;
+      background-repeat: no-repeat;
 }
+
+
 h1{
     text-align: center;
      padding-bottom: 10px;
-    color: blue ;
+    color: white ;
 }
 
 form{
-    margin-left: 35%;
+    position: absolute;
+    top: 25%;
+    margin-left: 33%;
     margin-right: 20%;
     width: 30%;
-    height: 60%;
-   padding:50px;
+    padding:40px;
    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
    border-radius: 7px;
    background-color: white;
    letter-spacing: 0.5px;
-   background-color:lavender;
+   background-color: rgb(35, 16, 70);
 }
 
 a{
