--- a/Lms-Frontend/src/app/login/student-login/student-login.component.html
+++ b/Lms-Frontend/src/app/login/student-login/student-login.component.html
@@ -1,6 +1,8 @@
+<div class="back">
+  <img class="img-fluid" [src]="image"  >
 <div class="login">
     <form class="form" #stuLogin="ngForm" (ngSubmit)="studentLogin()"> 
-      <h1 class="title mb-3 fw-normal" >Login as student</h1>
+      <h1 class="title mb-3 fw-normal" >Welcome</h1>
       <!-- email -->
       <div class="mb-3 form-group">
         <!-- <label for="email1" class="form-label">Email id</label> -->
@@ -48,9 +50,10 @@
       </div>
     
      <div class="d-grid gap-2">
-        <button type="submit" class="btn btn-success" [disabled]="stuLogin.form.invalid">LOGIN</button>
+        <button type="submit" class="btn btn-primary" [disabled]="stuLogin.form.invalid">LOGIN</button>
       </div>
       <br>
       <a routerLink="/stureg">Not a member? Signup</a>
       </form>
     </div>
+  </div>
