--- a/Lms-Frontend/src/app/signup/student-signup/student-signup.component.css
+++ b/Lms-Frontend/src/app/signup/student-signup/student-signup.component.css
@@ -1,22 +1,57 @@
+img{
+    position: relative;
+     width: 100%; 
+      min-height:100vh;
+      height: 800px;
+      background-attachment: fixed;
+      background-size: cover;
+      background-repeat: no-repeat;
+ 
+   }  
+  .top h1{
+    position: absolute;
+    top: 20px;
+    left: 45%;
+    color: white;
+  }
+  .top h3{
+      bottom: 20px;
+        position: absolute;
+        top: 80px;
+        left: 38%;
+        color: white;
+  }
+label{
+    margin:10px;
+    font-weight: bold;
+}
+
+label{
+    margin:10px;
+    font-weight: bold;
+}
+
 h1{
-    margin-top: 4%;
+    margin-bottom: 25px;
     text-align: center;
-    color: blue;
+    color: white;
 }
 
 form{
-    margin-left: 32%;
+    position: absolute;
+    top: 55px;
+    margin-left: 28%;
     margin-right: 20%;
-    margin-top: 3%;
-    margin-bottom: 3%;
-    width: 35%;
-    height: 60%;
-    padding:50px;
+    margin-top: 6%;
+    margin-bottom: 5%;
+    width: 42%;
+   color: white;
+    padding:40px;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
     border-radius: 7px;
-    background-color: white;
+    background-color: rgb(35, 16, 70);
     letter-spacing: 0.5px;
-    background-color:lavender;
+    
 }
 a{
     font-size: large;
