--- a/Lms-Frontend/src/app/student/student/student.component.html
+++ b/Lms-Frontend/src/app/student/student/student.component.html
@@ -1,6 +1,6 @@
 <div class="test">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" routerLink="">Student</a>
+        <a class="navbar-brand" routerLink="/student">Student</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
             aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -8,7 +8,7 @@
 
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="navbar-brand">
+                <!-- <li class="navbar-brand">
                     <a class="navbar-brand" routerLink="lrngmaterials">Learning Materials<span
                             class="sr-only"></span></a>
                 </li>
@@ -17,14 +17,48 @@
                 </li>
                 <li class="navbar-brand">
                     <a class="navbar-brand" routerLink="stufeedbacks">Feedback</a>
-                </li>
+                </li> -->
 
 
             </ul>
 
         </div>
     </nav>
-</div>
-<div class="backg">
+    <div class="backg">
+        <div class="cards">
+            <div class="card card-1">
+                <div class="card__icon"><i class="fas fa-bolt"></i></div>
+                <p class="card__exit"><i class="fas fa-times"></i></p>
+                <h2 class="card__title">Certified Specialist in Data Science & Analytics</h2>
+                <p class="card__apply">
+                    <a class="card__link" routerLink="course1">Get In <i class="fas fa-arrow-right"></i></a>
+                </p>
+            </div>
+            <div class="card card-2">
+                <div class="card__icon"><i class="fas fa-bolt"></i></div>
+                <p class="card__exit"><i class="fas fa-times"></i></p>
+                <h2 class="card__title">Certified Specialist in Software Testing</h2>
+                <p class="card__apply">
+                    <a class="card__link" routerLink="course2">Get In <i class="fas fa-arrow-right"></i></a>
+                </p>
+            </div>
+            <div class="card card-3">
+                <div class="card__icon"><i class="fas fa-bolt"></i></div>
+                <p class="card__exit"><i class="fas fa-times"></i></p>
+                <h2 class="card__title">Certified Specialist in Full Stack Development || MEAN Stack ||</h2>
+                <p class="card__apply">
+                    <a class="card__link" routerLink="course3">Get In <i class="fas fa-arrow-right"></i></a>
+                </p>
+            </div>
+            <div class="card card-4">
+                <div class="card__icon"><i class="fas fa-bolt"></i></div>
+                <p class="card__exit"><i class="fas fa-times"></i></p>
+                <h2 class="card__title">Certified Cyber Security Analyst</h2>
+                <p class="card__apply">
+                    <a class="card__link" routerLink="course4">Get In <i class="fas fa-arrow-right"></i></a>
+                </p>
+            </div>
+        </div>
 
-</div>
+
+    </div>
