allocation of trainer and students in respective couses

--- a/Lms-Frontend/src/app/admin/adm-nav/adm-nav.component.html
+++ b/Lms-Frontend/src/app/admin/adm-nav/adm-nav.component.html
@@ -19,7 +19,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/trahome" *ngIf="authService.getTokenAdmin()">Trainers</a>
+            <a class="nav-link active" aria-current="page" routerLink="/admfsd" *ngIf="authService.getTokenAdmin()">Trainers</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" routerLink="/stuhome" *ngIf="authService.getTokenAdmin()">Students</a>
