--- a/Lms-Frontend/src/app/admin/adm-student/adm-student.component.html
+++ b/Lms-Frontend/src/app/admin/adm-student/adm-student.component.html
@@ -1,6 +1,7 @@
 <app-adm-nav></app-adm-nav>
+<app-admin-stu-nav></app-admin-stu-nav>
 <!-- admin student details in admin -->
-<h1 style="text-align:center;">Enrolled Student List</h1>
+<h1 style="text-align:center;">Enrolled FSD001 Batch Student List</h1>
 
 <div style="margin-top: 50px;" class="col-lg-12 container">
         <div class="table-responsive table-bordered">
