--- a/Lms-Frontend/src/app/admin/update-tra/update-tra.component.html
+++ b/Lms-Frontend/src/app/admin/update-tra/update-tra.component.html
@@ -1,6 +1,6 @@
 
 <div>
-    <h1>Update Trainer Profile </h1>
+    <h1>Edit Trainer Profile </h1>
      <div class="all">
        <form  #traEdit="ngForm"  (ngSubmit)="editTrainerprof()">
            
@@ -11,7 +11,7 @@
                          <tbody>
                             
                            <tr>
-                               <td><label>Trainer Name</label></td>
+                               <td><label>Name</label></td>
                               
                                <td><input type="text" name="t_Name"  #trainername="ngModel"  [style.width.px]=600 [(ngModel)]=" trainerItem.trainername"
                                 required
@@ -21,7 +21,7 @@
                             
                              </tr>
                              <tr>
-                               <td><label>Trainer Address</label></td>
+                               <td><label>Address</label></td>
                                <td><input type="text" name="t_Address"
                                 #traineraddress="ngModel"
                                   [style.width.px]=600 [(ngModel)]="trainerItem.traineraddress"
@@ -33,7 +33,7 @@
                              </tr>
                              
                              <tr>
-                               <td><label>Trainer Phone No</label></td>
+                               <td><label>Phone No</label></td>
                                <td><input type="text" name="t_ph"  #trainerph="ngModel"
                                  [class.is-invalid]="trainerph.invalid && trainerph.touched"
                                pattern="[0-9\s]{10,10}"
@@ -41,7 +41,7 @@
                                <small class="text-danger" [class.d-none]="trainerph.valid || trainerph.untouched"> Ender valid phnumber</small></td>
                              </tr>
                              <tr>
-                                 <td><label>Trainer Education</label></td>
+                                 <td><label>Highest Qualiication</label></td>
                                  <td><input type="text" name="t_edu" #traineredu="ngModel" [style.width.px]=600 [(ngModel)]=" trainerItem.traineredu"
                                      [class.is-invalid]="traineredu.invalid && traineredu.touched"
                                       pattern="[A-Za-z\s0-9\+.]{2,25}"
@@ -49,7 +49,7 @@
                                      <small class="text-danger" [class.d-none]="traineredu.valid || traineredu.untouched">Enter valid qualification</small></td>
                                </tr>
                                <tr>
-                                <td><label>Trainer skill</label></td>
+                                <td><label>SkillS</label></td>
                                 <td><input type="text" name="t_skill" #trainerskill="ngModel" [style.width.px]=600 [(ngModel)]=" trainerItem.trainerskill"
                                     [class.is-invalid]="trainerskill.invalid && trainerskill.touched"
                                      pattern="[A-Za-z\s0-9\+.]{2,25}"
@@ -57,12 +57,29 @@
                                     <small class="text-danger" [class.d-none]="trainerskill.valid || trainerskill.untouched">Enter valid skills</small></td>
                               </tr>
                               <tr>
-                                <td><label>Trainer expeience</label></td>
+                                <td><label>Teaching Expeience</label></td>
                                 <td><input type="text" name="t_exp" #trainerexp="ngModel" [style.width.px]=600 [(ngModel)]=" trainerItem.trainerexp"
                                     [class.is-invalid]="trainerexp.invalid && trainerexp.touched"
-                                     pattern="[0-9\+.]{1,2}"
+                                     pattern="[A-Za-z\s+.]{2,25}"
                                     required>
                                     <small class="text-danger" [class.d-none]="trainerexp.valid || trainerexp.untouched">Enter valid experience</small></td>
+                              </tr>
+                              <tr>
+                                <td><label>Course Teaching</label></td>
+                                <td><input type="text" name="t_corse" #tracours="ngModel" [style.width.px]=600 [(ngModel)]=" trainerItem. tracours"
+                                    [class.is-invalid]="  tracours.invalid &&   tracours.touched"
+                                    required>
+                                    <small class="text-danger" [class.d-none]="tracours.valid ||  tracours.untouched">Enter valid course</small></td>
+                              </tr>
+                             <td></td>
+                              <tr>
+                                <td><label>Course Id</label></td>
+                                <td><input type="text" name="t_coid" #tracouid="ngModel" [style.width.px]=600 [(ngModel)]=" trainerItem. tracouid"
+                                    [class.is-invalid]=" tracouid.invalid &&  tracouid.touched"
+                                    minlength="3"
+                                    pattern="[A-Z]{3}"
+                                    required>
+                                    <small class="text-danger" [class.d-none]=" tracouid.valid || tracouid.untouched">Enter valid course id</small></td>
                               </tr>
                              <td></td>
                              
