--- a/Lms-Frontend/src/app/login/admin-login/admin-login.component.html
+++ b/Lms-Frontend/src/app/login/admin-login/admin-login.component.html
@@ -1,6 +1,9 @@
 <div class="back">
-  <img class="img-fluid" [src]="image"  >
+  <img class="img-fluid img" [src]="image">
+ 
 <div class="login">
+
+
     <form  #adLogin="ngForm" (ngSubmit)="adminLogin()">
       <h1 class="title mb-3 fw-normal">LOGIN</h1>
       <div class="mb-3">
