--- a/Lms-Frontend/src/app/signup/trainer-signup/trainer-signup.component.html
+++ b/Lms-Frontend/src/app/signup/trainer-signup/trainer-signup.component.html
@@ -141,7 +141,7 @@
           </div>
           <!-- couses -->
           <div class="col-md-6 col-sm-12">
-            <label for="courses">Course undertaking</label>
+            <label for="courses">Course</label>
             <select class="form-control" name="courses" id="courses" #courses="ngModel" [(ngModel)]="Trainer.courses"   required>
               <option value="" disabled>Choose Course</option>
               <option value="Full Stack Development">Fullstack Development</option>
