--- a/Lms-Frontend/src/app/admin/update-stu/update-stu.component.html
+++ b/Lms-Frontend/src/app/admin/update-stu/update-stu.component.html
@@ -1,6 +1,6 @@
 
 <div>
-   <h1>Update Student Profile </h1>
+   <h1>Edit Student Profile </h1>
     <div class="all">
       <form  #stuEdit="ngForm"  (ngSubmit)="editStudentprof()">
           
@@ -53,6 +53,15 @@
                                     required pattern="[A-Za-z\s0-9\+.]{2,25}"
                                     required>
                                     <small class="text-danger" [class.d-none]="studentedu.valid || studentedu.untouched">Enter valid qualification</small></td>
+                              </tr>
+                              <tr>
+                                <td><label>Course Id</label></td>
+                                <td><input type="text" name="t_coid" #stucouid="ngModel" [style.width.px]=600 [(ngModel)]="studentItem.stucouid"
+                                    [class.is-invalid]="stucouid.invalid && stucouid.touched"
+                                    minlength="3"
+                                    pattern="[A-Z]{3}"
+                                    required>
+                                    <small class="text-danger" [class.d-none]="stucouid.valid ||stucouid.untouched">Enter valid course id</small></td>
                               </tr>
                             <td></td>
                             
