--- a/Lms-Frontend/src/app/login/admin-login/admin-login.component.css
+++ b/Lms-Frontend/src/app/login/admin-login/admin-login.component.css
@@ -1,4 +1,4 @@
-img{
+.img{
     position: relative;
      width: 100%; 
       min-height:100vh;
@@ -35,3 +35,4 @@ a{
     display: flex;
     justify-content: center;
    }
+  
