home-courses section update

--- a/Lms-Frontend/src/app/courses/courses.component.html
+++ b/Lms-Frontend/src/app/courses/courses.component.html
@@ -5,44 +5,45 @@ https://dribbble.com/shots/14101951-Banners
 
 -->
 <div class="main-container">
-    <div class="heading">
-      <h1 class="heading__title">Certification Courses</h1>
-      <p class="heading__credits"><a class="heading__link" target="_blank" href="">Achieve your career goals with industry-recognized learning paths</a></p>
+  <div class="heading">
+    <h1 class="heading__title">Certification Courses</h1>
+    <p class="heading__credits"><a class="heading__link" target="_blank" href="">Achieve your career goals with
+        industry-recognized learning paths</a></p>
+  </div>
+  <div class="cards">
+    <div class="card card-1">
+      <div class="card__icon"><i class="fas fa-bolt"></i></div>
+      <p class="card__exit"><i class="fas fa-times"></i></p>
+      <h2 class="card__title">Certified Specialist in Data Science & Analytics</h2>
+      <p class="card__apply">
+        <a class="card__link" href="#">Apply Now <i class="fas fa-arrow-right"></i></a>
+      </p>
     </div>
-    <div class="cards">
-      <div class="card card-1">
-        <div class="card__icon"><i class="fas fa-bolt"></i></div>
-        <p class="card__exit"><i class="fas fa-times"></i></p>
-        <h2 class="card__title">Certified Specialist in Data Science & Analytics</h2>
-        <p class="card__apply">
-          <a class="card__link" href="#">Apply Now <i class="fas fa-arrow-right"></i></a>
-        </p>
-      </div>
-      <div class="card card-2">
-        <div class="card__icon"><i class="fas fa-bolt"></i></div>
-        <p class="card__exit"><i class="fas fa-times"></i></p>
-        <h2 class="card__title">Certified Specialist in Software Testing</h2>
-        <p class="card__apply">
-          <a class="card__link" href="#">Apply Now <i class="fas fa-arrow-right"></i></a>
-        </p>
-      </div>
-      <div class="card card-3">
-        <div class="card__icon"><i class="fas fa-bolt"></i></div>
-        <p class="card__exit"><i class="fas fa-times"></i></p>
-        <h2 class="card__title">Certified Specialist in Full Stack Development || MEAN Stack ||</h2>
-        <p class="card__apply">
-          <a class="card__link" href="#">Apply Now <i class="fas fa-arrow-right"></i></a>
-        </p>
-      </div>
-      <div class="card card-4">
-        <div class="card__icon"><i class="fas fa-bolt"></i></div>
-        <p class="card__exit"><i class="fas fa-times"></i></p>
-        <h2 class="card__title">Certified Cyber Security Analyst</h2>
-        <p class="card__apply">
-          <a class="card__link" href="#">Apply Now <i class="fas fa-arrow-right"></i></a>
-        </p>
-      </div>
-      <div class="card card-5">
+    <div class="card card-2">
+      <div class="card__icon"><i class="fas fa-bolt"></i></div>
+      <p class="card__exit"><i class="fas fa-times"></i></p>
+      <h2 class="card__title">Certified Specialist in Software Testing</h2>
+      <p class="card__apply">
+        <a class="card__link" href="#">Apply Now <i class="fas fa-arrow-right"></i></a>
+      </p>
+    </div>
+    <div class="card card-3">
+      <div class="card__icon"><i class="fas fa-bolt"></i></div>
+      <p class="card__exit"><i class="fas fa-times"></i></p>
+      <h2 class="card__title">Certified Specialist in Full Stack Development || MEAN Stack ||</h2>
+      <p class="card__apply">
+        <a class="card__link" href="#">Apply Now <i class="fas fa-arrow-right"></i></a>
+      </p>
+    </div>
+    <div class="card card-4">
+      <div class="card__icon"><i class="fas fa-bolt"></i></div>
+      <p class="card__exit"><i class="fas fa-times"></i></p>
+      <h2 class="card__title">Certified Cyber Security Analyst</h2>
+      <p class="card__apply">
+        <a class="card__link" href="#">Apply Now <i class="fas fa-arrow-right"></i></a>
+      </p>
+    </div>
+    <!-- <div class="card card-5">
         <div class="card__icon"><i class="fas fa-bolt"></i></div>
         <p class="card__exit"><i class="fas fa-times"></i></p>
         <h2 class="card__title">Microsoft SharePoint</h2>
@@ -57,9 +58,6 @@ https://dribbble.com/shots/14101951-Banners
         <p class="card__apply">
           <a class="card__link" href="#">Apply Now <i class="fas fa-arrow-right"></i></a>
         </p>
-      </div>
-    </div>
+      </div> -->
   </div>
-
-
-  
+</div>
