home-courses,student-course4 title update

--- a/Lms-Frontend/src/app/courses/courses.component.html
+++ b/Lms-Frontend/src/app/courses/courses.component.html
@@ -38,7 +38,7 @@ https://dribbble.com/shots/14101951-Banners
     <div class="card card-4">
       <div class="card__icon"><i class="fas fa-bolt"></i></div>
       <p class="card__exit"><i class="fas fa-times"></i></p>
-      <h2 class="card__title">Certified Cyber Security Analyst</h2>
+      <h2 class="card__title">Certified Specialist in Cyber Security Analyst</h2>
       <p class="card__apply">
         <a class="card__link" href="#">Apply Now <i class="fas fa-arrow-right"></i></a>
       </p>
