--- a/Lms-Frontend/src/app/student/courses/course4/course4.component.html
+++ b/Lms-Frontend/src/app/student/courses/course4/course4.component.html
@@ -23,5 +23,5 @@
     </div>
 </nav>
 <div class="backg">
-    <h2 style="color: white;">Certified Cyber Security Analyst</h2>
+    <h2 style="color: white;">Certified Specialist in Cyber Security Analyst</h2>
 </div>
