title update student-courses

--- a/Lms-Frontend/src/app/student/student/student.component.html
+++ b/Lms-Frontend/src/app/student/student/student.component.html
@@ -53,7 +53,7 @@
             <div class="card card-4">
                 <div class="card__icon"><i class="fas fa-bolt"></i></div>
                 <p class="card__exit"><i class="fas fa-times"></i></p>
-                <h2 class="card__title">Certified Cyber Security Analyst</h2>
+                <h2 class="card__title">Certified Specialist in Cyber Security Analyst</h2>
                 <p class="card__apply">
                     <a class="card__link" routerLink="course4">Get In <i class="fas fa-arrow-right"></i></a>
                 </p>
