--- a/Lms-Frontend/src/app/admin/update-tra/update-tra.component.html
+++ b/Lms-Frontend/src/app/admin/update-tra/update-tra.component.html
@@ -1,4 +1,6 @@
-
+<div class="back">
+  <img class="img-fluid img" [src]="image">
+ 
 <div>
     <h1>Edit Trainer Profile </h1>
      <div class="all">
@@ -95,3 +97,4 @@
        </form>
      </div>
   </div>
+</div>
