--- a/Lms-Frontend/src/app/admin/adm-nav/adm-nav.component.html
+++ b/Lms-Frontend/src/app/admin/adm-nav/adm-nav.component.html
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/admin" *ngIf="authService.getTokenAdmin()">Admin</a>
+            <a class="nav-link active" aria-current="page" routerLink="/admhome" *ngIf="authService.getTokenAdmin()">Admin</a>
           </li>
           <li class="nav-item dropdown" *ngIf="authService.getTokenAdmin()">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
