--- a/Lms-Frontend/src/app/admin/update-stu/update-stu.component.html
+++ b/Lms-Frontend/src/app/admin/update-stu/update-stu.component.html
@@ -1,4 +1,5 @@
-
+<div class="back">
+  <img class="img-fluid img" [src]="image">
 <div>
    <h1>Edit Student Profile </h1>
     <div class="all">
@@ -76,4 +77,5 @@
   
       </form>
     </div>
+ </div>
  </div>
