--- a/Lms-Frontend/src/app/admin/update-tra/update-tra.component.css
+++ b/Lms-Frontend/src/app/admin/update-tra/update-tra.component.css
@@ -1,10 +1,28 @@
+.img{
+    position: relative;
+     width: 100%; 
+      min-height:100vh;
+      height: 600px;
+      background-attachment: fixed;
+      background-size: cover;
+      background-repeat: no-repeat;
+}
+
 h1{
+    position: absolute;
+    top: 30px;
+    left: 35%;
+    font-style: italic;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: darkblue;
+    font-size: 50px;
+    font-weight: lighter;
     text-align: center;
-    margin-top: 30px;
+    
 }
 form{
-   
-    margin-top: 30px;
+   position: absolute;
+   top: 20%;
     width: 70%;
     height: 60%;
     margin-left:15%;
