--- a/Lms-Frontend/src/app/login/admin-login/admin-login.component.css
+++ b/Lms-Frontend/src/app/login/admin-login/admin-login.component.css
@@ -17,8 +17,8 @@ h1{
 
 form{
     position: absolute;
-    top: 25%;
-    margin-left: 33%;
+    top: 28%;
+    margin-left: 35%;
     margin-right: 20%;
     width: 30%;
     padding:40px;
@@ -26,7 +26,7 @@ form{
    border-radius: 7px;
    background-color: white;
    letter-spacing: 0.5px;
-   background-color: rgb(35, 16, 70);
+   background-color: rgb(48, 16, 107);
 }
 
 a{
@@ -35,4 +35,16 @@ a{
     display: flex;
     justify-content: center;
    }
-  
+   .top h1{
+    position: absolute;
+    top: 50px;
+    left: 47%;
+    color: white;
+  }
+  .top h3{
+      
+        position: absolute;
+        top: 130px;
+        left: 38%;
+        color: white;
+  }
