--- a/Lms-Frontend/src/app/login/admin-login/admin-login.component.html
+++ b/Lms-Frontend/src/app/login/admin-login/admin-login.component.html
@@ -2,8 +2,10 @@
   <img class="img-fluid img" [src]="image">
  
 <div class="login">
-
-
+  <div class="top">
+    <h1>LMS</h1>
+    <h3>Your gateway to success</h3>
+  </div>
     <form  #adLogin="ngForm" (ngSubmit)="adminLogin()">
       <h1 class="title mb-3 fw-normal">LOGIN</h1>
       <div class="mb-3">
