edit trainer batchid done

--- a/Lms-Frontend/src/app/admin/adm-tarainer/adm-tarainer.component.html
+++ b/Lms-Frontend/src/app/admin/adm-tarainer/adm-tarainer.component.html
@@ -17,7 +17,7 @@
                         <th>Experience in teaching</th>
                         <th>Course</th>
                         <th>Date of enrollment</th>
-                        <th></th>
+                        <th>Batch Id</th>
                         <th></th>
                         <th></th>
                         <th></th>
@@ -34,7 +34,7 @@
                                  <td>{{trainer.trainerexp}}</td>
                                  <td>{{trainer.tracours}}</td>
                                  <td>{{trainer.tradate}}</td>
-                                 <td></td>
+                                 <td>{{trainer.tracoubtch}}</td>
                                  <td>
                                     <td>
                                         <button class="btn btn-warning"  (click)="editTrainer(trainer)">Edit</button>
