--- a/Lms-Frontend/src/app/signup/student-signup/student-signup.component.css
+++ b/Lms-Frontend/src/app/signup/student-signup/student-signup.component.css
@@ -12,14 +12,16 @@ img{
     position: absolute;
     top: 20px;
     left: 45%;
-    color: white;
+    color: darkblue;
+    background-color: white;
   }
   .top h3{
       bottom: 20px;
         position: absolute;
         top: 80px;
         left: 38%;
-        color: white;
+        color: darkblue;
+    background-color: white;
   }
 label{
     margin:10px;
@@ -49,7 +51,7 @@ form{
     padding:40px;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
     border-radius: 7px;
-    background-color: rgb(35, 16, 70);
+    background-color: rgb(7, 7, 100);
     letter-spacing: 0.5px;
     
 }
