--- a/Lms-Frontend/src/app/admin/adm-nav/adm-nav.component.css
+++ b/Lms-Frontend/src/app/admin/adm-nav/adm-nav.component.css
@@ -1,3 +1,8 @@
 .navbar-brand, .nav-link{
     color: white;
 }
+.nav-link:hover{
+    color:black;
+    background-color: lightblue;
+    /* border-radius: 15px; */
+}
