--- a/Lms-Frontend/src/app/admin/admin-main/admin-main.component.html
+++ b/Lms-Frontend/src/app/admin/admin-main/admin-main.component.html
@@ -4,8 +4,8 @@
    <!-- student -->
 <div class="card" style="width: 28rem;">
     <div class="card-body">
-      <h5 class="card-title">number of students</h5>
-      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+      <h5 class="card-title">number of csd students</h5>
+      <h6 class="card-subtitle mb-2 text-muted"></h6>
       <img class="img-fluid img1" [src]="image1">
     </div>
   </div>
