--- a/Lms-Frontend/src/app/admin/adm-nav/adm-nav.component.html
+++ b/Lms-Frontend/src/app/admin/adm-nav/adm-nav.component.html
@@ -6,8 +6,14 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link active" aria-current="page" routerLink="/admhome" *ngIf="authService.getTokenAdmin()">Admin</a>
+          </li> -->
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="/admfsd" *ngIf="authService.getTokenAdmin()">Trainers</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" routerLink="/stuhome" *ngIf="authService.getTokenAdmin()">Students</a>
           </li>
           <li class="nav-item dropdown" *ngIf="authService.getTokenAdmin()">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -18,12 +24,7 @@
               <li><a class="dropdown-item" routerLink="/traaccess">Trainers</a></li>
             </ul>
           </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/admfsd" *ngIf="authService.getTokenAdmin()">Trainers</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/stuhome" *ngIf="authService.getTokenAdmin()">Students</a>
-          </li>
+          
          </ul>
         <form class="d-flex" role="search">
           <button class="btn btn-outline-success" routerLink="/adlogin" type="submit" *ngIf="!authService.getTokenAdmin()">Login</button>
