--- a/Lms-Frontend/src/app/admin/admin-tra-nav/admin-tra-nav.component.html
+++ b/Lms-Frontend/src/app/admin/admin-tra-nav/admin-tra-nav.component.html
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
    
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+ 
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item active">
           <a class="nav-link" routerLink="/admfsd">FSD</a>
         </li>
@@ -17,8 +17,6 @@
           </li>
         
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        
-      </form>
+     
     </div>
   </nav>
