--- a/Lms-Frontend/src/app/admin/adm-tarainer/adm-tarainer.component.html
+++ b/Lms-Frontend/src/app/admin/adm-tarainer/adm-tarainer.component.html
@@ -3,7 +3,7 @@
 <app-admin-tra-nav></app-admin-tra-nav>
 <h1 style="text-align:center;">Enrolled DSA Trainer List</h1>
 
-<div style="margin-top: 50px;" class="col-lg-12 container">
+<div style="margin-top: 50px;" class="col-lg-12 container-fluid">
         <div class="table-responsive table-bordered">
             <table class="table table-hover">
                 <thead style="text-align:center;">
