--- a/Lms-Frontend/src/app/admin/admin-tra-fsd/admin-tra-fsd.component.html
+++ b/Lms-Frontend/src/app/admin/admin-tra-fsd/admin-tra-fsd.component.html
@@ -3,7 +3,7 @@
 
   <h1 style="text-align:center;">Enrolled FSD Trainer List</h1>
 
-<div style="margin-top: 50px;" class="col-lg-12 container">
+<div style="margin-top: 50px;" class="col-lg-12 container-fluid">
         <div class="table-responsive table-bordered">
             <table class="table table-hover">
                 <thead style="text-align:center;">
