--- a/Lms-Frontend/src/app/admin/update-stu/update-stu.component.html
+++ b/Lms-Frontend/src/app/admin/update-stu/update-stu.component.html
@@ -66,7 +66,7 @@
                               </tr>
                             <td></td>
                             
-                            <button class="btn btn-success btn-lg" [style.width.px]=530 type="submit" [disabled]="stuEdit.form.invalid">Update</button>
+                            <button class="btn btn-success btn-lg" [style.width.px]=530 type="submit">Update</button>
                         
                           </tbody>
                     </table>
