font-styling google fonts student-courses-home

--- a/Lms-Frontend/src/app/student/student/student.component.css
+++ b/Lms-Frontend/src/app/student/student/student.component.css
@@ -105,6 +105,7 @@
     grid-row: 3/4;
     font-weight: 400;
     color: #ffffff;
+    font-family: 'Open Sans', sans-serif;
   }
   
   .card__apply {
