--- a/Lms-Frontend/src/app/student/courses/course1/course1.component.css
+++ b/Lms-Frontend/src/app/student/courses/course1/course1.component.css
@@ -3,3 +3,8 @@
     background-size: cover;
     height: 768px;
 }
+.backg h2{
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+
+}
