--- a/Lms-Frontend/src/app/home/home.component.html
+++ b/Lms-Frontend/src/app/home/home.component.html
@@ -37,10 +37,10 @@
               <a routerLink="" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-              <a routerLink="courses" class="nav-link">Courses</a>
+              <a routerLink="/courses" class="nav-link">Courses</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link">Login</a>
+              <a class="nav-link" routerLink="/tralogin">Login</a>
             </li>
           </ul>
         </div>
@@ -126,11 +126,11 @@
           </div>
 
           <!-- Left and right controls of Carousel -->
-          <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+          <a class="carousel-control-prev"role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
           </a>
-          <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+          <a class="carousel-control-next" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>
@@ -156,7 +156,7 @@
               <p class="card-text">Salary Upto 10LPA</p>
               <p class="card-text">100+ Placed</p>
               <!-- <p class="card-text">3 Design Template</p> -->
-              <button class="btn btn-dark btn-block">Join Us</button>
+              <button class="btn btn-dark btn-block" routerLink="/stureg">Join Us</button>
             </div>
           </div>
         </div>
@@ -169,7 +169,7 @@
               <p class="card-text">Salary Upto 15LPA</p>
               <p class="card-text">75+ Placed</p>
               <!-- <p class="card-text">5 Design Template</p> -->
-              <button class="btn btn-dark btn-block">Join Us</button>
+              <button class="btn btn-dark btn-block" routerLink="/stureg">Join Us</button>
             </div>
           </div>
         </div>
@@ -182,7 +182,7 @@
               <p class="card-text">Salary Upto 8LPA</p>
               <p class="card-text">60+ Placed</p>
               <!-- <p class="card-text">Unlimited Design Template</p> -->
-              <button class="btn btn-dark btn-block">Join Us</button>
+              <button class="btn btn-dark btn-block" routerLink="/stureg">Join Us</button>
             </div>
           </div>
         </div>
