--- a/Lms-Frontend/src/app/admin/adm-stu-access/adm-stu-access.component.html
+++ b/Lms-Frontend/src/app/admin/adm-stu-access/adm-stu-access.component.html
@@ -2,7 +2,7 @@
 
 <h1 style="text-align:center;">{{title}}</h1>
 
-     <div style="margin-top: 50px;" class="col-lg-12 container">
+     <div style="margin-top: 50px;" class="col-lg-12 container-fluid">
         <div class="table-responsive table-bordered">
             <table class="table table-hover">
                 <thead style="text-align:center;">
