--- a/Lms-Frontend/src/app/courses/courses.component.css
+++ b/Lms-Frontend/src/app/courses/courses.component.css
@@ -4,10 +4,10 @@
     box-sizing: border-box;
   }
   
-  body {
+  /* body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
       Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  }
+  } */
   
   .main-container {
     padding: 30px;
