--- a/Lms-Frontend/src/app/courses/courses.component.html
+++ b/Lms-Frontend/src/app/courses/courses.component.html
@@ -1,38 +1,32 @@
-<!-- 
-
-GRADIENT BANNER DESIGN BY SIMON LURWER ON DRIBBBLE:
-https://dribbble.com/shots/14101951-Banners
-
--->
 <div class="main-container">
   <div class="heading">
     <h1 class="heading__title">Certification Courses</h1>
-    <p class="heading__credits"><a class="heading__link" target="_blank" href="">Achieve your career goals with
+    <p class="heading__credits"><a class="heading__link" target="_blank">Achieve your career goals with
         industry-recognized learning paths</a></p>
   </div>
   <div class="cards">
     <div class="card card-1">
-      <div class="card__icon"><i class="fas fa-bolt"></i></div>
-      <p class="card__exit"><i class="fas fa-times"></i></p>
+      <!-- <div class="card__icon"><i class="fas fa-bolt"></i></div>
+      <p class="card__exit"><i class="fas fa-times"></i></p> -->
       <h2 class="card__title">Certified Specialist in Data Science & Analytics</h2>
       <p class="card__apply">
-        <a class="card__link" href="#">Apply Now <i class="fas fa-arrow-right"></i></a>
+        <a class="card__link">Apply Now</a>
       </p>
     </div>
     <div class="card card-2">
-      <div class="card__icon"><i class="fas fa-bolt"></i></div>
-      <p class="card__exit"><i class="fas fa-times"></i></p>
+      <!-- <div class="card__icon"><i class="fas fa-bolt"></i></div>
+      <p class="card__exit"><i class="fas fa-times"></i></p> -->
       <h2 class="card__title">Certified Specialist in Software Testing</h2>
       <p class="card__apply">
-        <a class="card__link" href="#">Apply Now <i class="fas fa-arrow-right"></i></a>
+        <a class="card__link">Apply Now</a>
       </p>
     </div>
     <div class="card card-3">
-      <div class="card__icon"><i class="fas fa-bolt"></i></div>
-      <p class="card__exit"><i class="fas fa-times"></i></p>
+      <!-- <div class="card__icon"><i class="fas fa-bolt"></i></div>
+      <p class="card__exit"><i class="fas fa-times"></i></p> -->
       <h2 class="card__title">Certified Specialist in Full Stack Development || MEAN Stack ||</h2>
       <p class="card__apply">
-        <a class="card__link" href="#">Apply Now <i class="fas fa-arrow-right"></i></a>
+        <a class="card__link" >Apply Now</a>
       </p>
     </div>
     <div class="card card-4">
@@ -40,24 +34,8 @@ https://dribbble.com/shots/14101951-Banners
       <p class="card__exit"><i class="fas fa-times"></i></p>
       <h2 class="card__title">Certified Specialist in Cyber Security Analyst</h2>
       <p class="card__apply">
-        <a class="card__link" href="#">Apply Now <i class="fas fa-arrow-right"></i></a>
+        <a class="card__link">Apply Now</a>
       </p>
     </div>
-    <!-- <div class="card card-5">
-        <div class="card__icon"><i class="fas fa-bolt"></i></div>
-        <p class="card__exit"><i class="fas fa-times"></i></p>
-        <h2 class="card__title">Microsoft SharePoint</h2>
-        <p class="card__apply">
-          <a class="card__link" href="#">Apply Now <i class="fas fa-arrow-right"></i></a>
-        </p>
-      </div>
-      <div class="card card-1">
-        <div class="card__icon"><i class="fas fa-bolt"></i></div>
-        <p class="card__exit"><i class="fas fa-times"></i></p>
-        <h2 class="card__title">Certified Specialist in Machine Learning and Artificial Intelligence</h2>
-        <p class="card__apply">
-          <a class="card__link" href="#">Apply Now <i class="fas fa-arrow-right"></i></a>
-        </p>
-      </div> -->
   </div>
 </div>
