--- a/Lms-Frontend/src/app/login/student-login/student-login.component.css
+++ b/Lms-Frontend/src/app/login/student-login/student-login.component.css
@@ -13,6 +13,18 @@ h1{
      padding-bottom: 10px;
     color: white ;
 }
+.top h1{
+    position: absolute;
+    top: 30px;
+    left: 40%;
+    color:darkblue;
+  }
+  .top h3{
+        position: absolute;
+        top: 100px;
+        left: 32%;
+        color: darkblue;
+  }
 
 form{
     
