--- a/Lms-Frontend/src/app/login/trainer-login/trainer-login.component.css
+++ b/Lms-Frontend/src/app/login/trainer-login/trainer-login.component.css
@@ -13,6 +13,20 @@ h1{
      padding-bottom: 10px;
     color: white ;
 }
+.top h1{
+    position: absolute;
+    top: 35px;
+    left: 44%;
+    color:white;
+    /* background-color: white; */
+  }
+  .top h3{
+        position: absolute;
+        top: 100px;
+        left: 37%;
+        color: white;
+        /* background-color: white; */
+  }
 
 form{
     position: absolute;
