--- a/Lms-Frontend/src/app/login/trainer-login/trainer-login.component.html
+++ b/Lms-Frontend/src/app/login/trainer-login/trainer-login.component.html
@@ -1,9 +1,12 @@
 <div class="back">
   <img class="img-fluid" [src]="image"  ></div>
-
+  <div class="top">
+    <h1>LMS</h1>
+    <h3>Your gateway to success</h3>
+  </div>
 <div class="login">
     <form  #traLogin="ngForm" (ngSubmit)="trainerLogin()">
-      <h1 class="title mb-3 fw-normal">Welcome</h1>
+      <h1 class="title mb-3 fw-normal">Welcome Trainer</h1>
       <div class="mb-3 form-group">
         <input type="email" 
         class="form-control"
@@ -12,7 +15,7 @@
          [(ngModel)]="Trainer.traineremail"
          #traineremail="ngModel"
          [class.is-invalid]="traineremail.invalid && traineremail.touched"
-         pattern="^[a-zA-z0-9\.%_-]+@[a-zA-Z0-9%_]+\.[a-z]{2,4}(.[a-z]{2,3})?"
+         minlength="6"
          placeholder="Email Id"
          required>
          <!-- email validation -->
@@ -32,7 +35,7 @@
          name="trainerpwd"
              [(ngModel)]="Trainer.trainerpwd"
              #trainerpwd="ngModel"
-             pattern="(?=^.{6,}$)(?=.*\d)(?=.*[!@#$%^&*]+)(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$"
+           minlength="6"
               [class.is-invalid]="trainerpwd.invalid && trainerpwd.touched"
              placeholder="Password"
              required>
