--- a/Lms-Frontend/src/app/trainer/trainerlearningmaterials/trainerlearningmaterials.component.html
+++ b/Lms-Frontend/src/app/trainer/trainerlearningmaterials/trainerlearningmaterials.component.html
@@ -2,7 +2,7 @@
 <br>
 <br>
 <div class="alert alert-danger" role="alert">
-  <a class="card__link" routerLink="/trainer/materiallist"><h2>HTML/CSS</h2><i class="fas fa-arrow-right"></i></a>
+  <a class="card__link" routerLink="/trainer/materiallist"><h2>Material List</h2><i class="fas fa-arrow-right"></i></a>
  </div>
 <!-- <div class="alert alert-danger" role="alert">
     <a class="card__link" routerLink="/trainer/htmlcssvideos"><h2>HTML/CSS</h2><i class="fas fa-arrow-right"></i></a>
